--- a/game.html
+++ b/game.html
@@ -45,7 +45,7 @@
     <!--end instruction screen-->
     <!--game screen-->
     <div class="game" id="game-screen">
-        <div class="btn purple go-back" id="btn-return-game-screen">Go Back</div>
+        <div class="btn purple go-back in-main" id="btn-return-game-screen">Go Back</div>
         <div class="main_grid">
             <div class="main-grid-cell"></div>
             <div class="main-grid-cell"></div>
